src/styles/_type.scss
@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap');

html {
    font-family: 'Spartan', sans-serif;
    font-size: 15px;
    scroll-behavior: smooth;

    @media screen and (max-width: 900px) {
        font-size: 13px;
    }
}

h1 {
    font-size: calc(5em + 5vw);
    color: get-color(very-light-gray);
}

h2 {
    font-size: calc(2em + 1.5vw);
}

p {
    color: get-color(dark-gray);
    line-height: 1.667;
}

